refactor file io -> path nio