@@ -28,7 +28,6 @@ import org.apache.coyote.http2.Http2Protocol;
 
 import javax.servlet.ServletException;
 import java.io.BufferedReader;
-import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
@@ -38,7 +37,7 @@ import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.time.Instant;
 import java.util.ArrayList;
 import java.util.List;
@@ -84,20 +83,20 @@ public class TomcatOnejarRunner
         tomcat.setSilent( true );
 
         {
-            final File basePath = new File( onejarConfig.getWorkingPath().getPath() + File.separator + "b" );
-            ArgumentParser.mkdirs( basePath );
-            tomcat.setBaseDir( basePath.getAbsolutePath() );
+            final Path basePath = onejarConfig.getWorkingPath().resolve( "b" );
+            Files.createDirectories( basePath );
+            tomcat.setBaseDir( basePath.toString() );
         }
         {
-            final File basePath = new File( onejarConfig.getWorkingPath().getPath() + File.separator + "a" );
-            ArgumentParser.mkdirs( basePath );
-            tomcat.getServer().setCatalinaBase( basePath );
-            tomcat.getServer().setCatalinaHome( basePath );
+            final Path basePath = onejarConfig.getWorkingPath().resolve( "a" );
+            Files.createDirectories( basePath );
+            tomcat.getServer().setCatalinaBase( basePath.toFile() );
+            tomcat.getServer().setCatalinaHome( basePath.toFile() );
         }
         {
-            final File workPath = new File( onejarConfig.getWorkingPath().getPath() + File.separator + "w" );
-            ArgumentParser.mkdirs( workPath );
-            tomcat.getHost().setAppBase( workPath.getAbsolutePath() );
+            final Path workPath = onejarConfig.getWorkingPath().resolve( "w" );
+            Files.createDirectories( workPath );
+            tomcat.getHost().setAppBase( workPath.toString() );
         }
 
         tomcat.getHost().setAutoDeploy( false );
@@ -105,7 +104,7 @@ public class TomcatOnejarRunner
 
         deployRedirectConnector( tomcat, onejarConfig );
 
-        final String warPath = onejarConfig.getWarFolder().getAbsolutePath();
+        final String warPath = onejarConfig.getWarFolder().toString();
         tomcat.addWebapp( "/" + onejarConfig.getContext(), warPath );
 
         try
@@ -122,26 +121,27 @@ public class TomcatOnejarRunner
     }
 
     private void deployRedirectConnector( final Tomcat tomcat, final OnejarConfig onejarConfig )
-            throws IOException, ServletException
+            throws IOException
     {
         final String srcRootWebXml = "ROOT-redirect-webapp/WEB-INF/web.xml";
         final String srcRootIndex = "ROOT-redirect-webapp/WEB-INF/index.jsp";
 
-        final File redirBase = new File( onejarConfig.getWorkingPath().getAbsoluteFile() + File.separator + "redirectBase" );
-        ArgumentParser.mkdirs( redirBase );
+        final Path redirBase = onejarConfig.getWorkingPath().resolve( "redirectBase" );
+        Files.createDirectories( redirBase );
         {
-            ArgumentParser.mkdirs( new File ( redirBase.getAbsolutePath() + File.separator + "WEB-INF" ) );
+            final Path webInfPath = redirBase.resolve( "WEB-INF" );
+            Files.createDirectories( webInfPath );
             copyFileAndReplace(
                     srcRootWebXml,
-                    redirBase.getPath() + File.separator + "WEB-INF" + File.separator + "web.xml",
+                    webInfPath.resolve( "web.xml" ).toString(),
                     onejarConfig.getContext() );
             copyFileAndReplace(
                     srcRootIndex,
-                    redirBase.getPath() + File.separator +  "WEB-INF" + File.separator + "index.jsp",
+                    webInfPath.resolve( "index.jsp" ).toString(),
                     onejarConfig.getContext() );
         }
 
-        tomcat.addWebapp( "", redirBase.getAbsolutePath() );
+        tomcat.addWebapp( "", redirBase.toString() );
     }
 
 
@@ -159,7 +159,7 @@ public class TomcatOnejarRunner
         connector.setScheme( "https" );
         connector.addUpgradeProtocol( new Http2Protocol() );
         connector.setProperty( "SSLEnabled", "true" );
-        connector.setProperty( "keystoreFile", onejarConfig.getKeystoreFile().getAbsolutePath() );
+        connector.setProperty( "keystoreFile", onejarConfig.getKeystoreFile().toString() );
         connector.setProperty( "keystorePass", onejarConfig.getKeystorePass() );
         connector.setProperty( "keyAlias", OnejarMain.KEYSTORE_ALIAS );
         connector.setProperty( "clientAuth", "false" );
@@ -222,7 +222,7 @@ public class TomcatOnejarRunner
         try ( URLClassLoader classLoader = warClassLoaderFromConfig( onejarConfig ) )
         {
             final Class<?> pwmMainClass = classLoader.loadClass( "password.pwm.util.OnejarHelper" );
-            final String keystoreFile = onejarConfig.getKeystoreFile().getAbsolutePath();
+            final String keystoreFile = onejarConfig.getKeystoreFile().toString();
             final Method mainMethod = pwmMainClass.getMethod(
                     "onejarHelper",
                     String.class,
@@ -232,7 +232,7 @@ public class TomcatOnejarRunner
             );
 
             final String[] arguments = new String[] {
-                    onejarConfig.getApplicationPath().getAbsolutePath(),
+                    onejarConfig.getApplicationPath().toString(),
                     keystoreFile,
                     OnejarMain.KEYSTORE_ALIAS,
                     onejarConfig.getKeystorePass(),
@@ -248,13 +248,12 @@ public class TomcatOnejarRunner
     private void setupEnv( final OnejarConfig onejarConfig )
     {
         final String envVarPrefix = Resource.envVarPrefix.getValue() + ".";
-        System.setProperty( envVarPrefix + "applicationPath", onejarConfig.getApplicationPath().getAbsolutePath() );
+        System.setProperty( envVarPrefix + "applicationPath", onejarConfig.getApplicationPath().toString() );
         System.setProperty( envVarPrefix + "ManageHttps", Boolean.TRUE.toString() );
         System.setProperty( envVarPrefix + "OnejarInstance", Boolean.TRUE.toString() );
-        System.setProperty( envVarPrefix + "AutoExportHttpsKeyStoreFile", onejarConfig.getKeystoreFile().getAbsolutePath() );
+        System.setProperty( envVarPrefix + "AutoExportHttpsKeyStoreFile", onejarConfig.getKeystoreFile().toString() );
         System.setProperty( envVarPrefix + "AutoExportHttpsKeyStorePassword", onejarConfig.getKeystorePass() );
         System.setProperty( envVarPrefix + "AutoExportHttpsKeyStoreAlias", OnejarMain.KEYSTORE_ALIAS );
-
     }
 
 
@@ -271,7 +270,7 @@ public class TomcatOnejarRunner
             {
                 String contents = reader.lines().collect( Collectors.joining( "\n" ) );
                 contents = contents.replace( "[[[ROOT_CONTEXT]]]", rootcontext );
-                Files.write( Paths.get( destPath ), contents.getBytes( StandardCharsets.UTF_8 ) );
+                Files.write( Path.of( destPath ), contents.getBytes( StandardCharsets.UTF_8 ) );
             }
         }
     }
@@ -279,19 +278,20 @@ public class TomcatOnejarRunner
     URLClassLoader warClassLoaderFromConfig( final OnejarConfig onejarConfig )
             throws IOException
     {
-        final File warPath = onejarConfig.getWarFolder();
-        final File webInfPath = new File( warPath.getAbsolutePath() + File.separator + "WEB-INF" + File.separator + "lib" );
-        final File[] jarFiles = webInfPath.listFiles();
-        final List<URL> jarURLList = new ArrayList<>();
-        if ( jarFiles != null )
+        final Path warPath = onejarConfig.getWarFolder();
+        final Path webInfLibPath = warPath.resolve( "WEB-INF" ).resolve( "lib" );
+        final List<Path> jarFiles = Files.list( webInfLibPath )
+                .filter( path -> path.getFileName().toString().endsWith( ".jar" ) )
+                .collect( Collectors.toList() );
+
+        final List<URL> jarURLList = new ArrayList<>( jarFiles.size() );
+        for ( final Path jarFile : jarFiles )
         {
-            for ( final File jarFile : jarFiles )
-            {
-                jarURLList.add( jarFile.toURI().toURL() );
-            }
+            jarURLList.add( jarFile.toUri().toURL() );
         }
         return URLClassLoader.newInstance( jarURLList.toArray( new URL[0] ) );
     }
+
 
     public void shutdown() throws LifecycleException
     {
